2010-07-06  Noel O'Boyle

	* src/formats/gamessukformat.cpp, CMakeLists.txt: Enable GAMESS-UK
	format under MSVC (uses std::tr1::regex instead of regex.h)

2010-07-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/inchi103, src/formats/inchi103: Import final InChI 1.03
	release.

2010-07-06  Noel O'Boyle

	* include/openbabel/forcefield.h: Fix memory leak identified by VLD

2010-07-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefielduff.cpp: Revert changes and parse
	extra parameters for now.

	* doc/Doxyfile: Renamed from Doxyfile.in (not generated by
	autoconf anymore). Generate ob.tag file for projects generating
	doxygen documentation with Open Babel symbols (e.g., Avogadro).

	* src/oberror.cpp: Fix from Seth Alves to initialize stream
	buffers (from Valgrind).

2010-07-05  Konstantin Tokarev <annulen@yandex.ru>

	* THANKS, authors.txt: Added myself to contributors

2010-07-04  Noel O'Boyle

	* src/formats/*format.cpp: Added text from wiki formats [F-Z] to their
	Descriptions in the .cpp file.

2010-07-03  Chris Morley

	* src/GUI/optswx.cpp: can use "not displayed in GUI" in option
	list in Description()

	* include/openbabel/depict/painter.h add operator += for OBColor

	* include/openbabel/depict/depict.h,svgpainter.h,
	  src/depict/depict.cpp, src/depict/svgpainter.cpp: add option
	  for internalColor on atoms and bonds (by OBPairData)

	* src/formats/svgformat.cpp:add option to display internalColor
	Remove "Additional Option" in Description

	* src/formats/xml/cmlformat.cpp: read and write color on bonds

	* src/ops/substructdata.cpp:add new op --ss which is like -s but
	colors the substructure

2010-07-02  Noel O'Boyle

	* include/openbabel/base.h: Add OBAPI declaration to new global
	function OBReleaseVersion()

2010-07-01  Noel O'Boyle

	* src/formats/*format.cpp: Added text from wiki formats [A-F] to their
	Descriptions in the .cpp file. I added some markup to CML and
	Fastsearch.
